--- a/pom.xml
+++ b/pom.xml
@@ -3,9 +3,9 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>io.github.felipeflores</groupId>
-    <artifactId>Olina</artifactId>
+    <artifactId>olina</artifactId>
     <version>1.0.3-SNAPSHOT</version>
-    <packaging>pom</packaging>
+    <packaging>jar</packaging>
 
     <properties>
         <java.version>1.8</java.version>
@@ -53,7 +53,11 @@
             <artifactId>spring-data-jpa</artifactId>
             <version>2.2.4.RELEASE</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.modelmapper</groupId>
+            <artifactId>modelmapper</artifactId>
+            <version>2.3.4</version>
+        </dependency>
     </dependencies>
 
     <name>Olina speed code</name>
