--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>io.github.felipeflores</groupId>
     <artifactId>olina</artifactId>
-    <version>1.0.3-SNAPSHOT</version>
+    <version>1.0.3</version>
     <packaging>jar</packaging>
 
     <properties>
@@ -93,7 +93,7 @@
         <url>git@github.com:felipeflores/olina.git</url>
         <connection>scm:git:git@github.com:felipeflores/olina.git</connection>
         <developerConnection>scm:git:git@github.com:felipeflores/olina.git</developerConnection>
-        <tag>HEAD</tag>
+        <tag>olina-1.0.3</tag>
     </scm>
 
 
@@ -172,6 +172,7 @@
                 <version>${version.maven-javadoc-plugin}</version>
                 <configuration>
                     <encoding>UTF-8</encoding>
+                    <detectJavaApiLink>false</detectJavaApiLink>
                 </configuration>
                 <executions>
                     <execution>
@@ -181,6 +182,7 @@
                         </goals>
                     </execution>
                 </executions>
+
             </plugin>
             <plugin>
                 <artifactId>maven-deploy-plugin</artifactId>
