--- a/pom.xml
+++ b/pom.xml
@@ -58,10 +58,25 @@
             <artifactId>modelmapper</artifactId>
             <version>2.3.4</version>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.12</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+            <version>2.11.0</version>
+        </dependency>
+        <dependency>
+            <groupId>net.logstash.logback</groupId>
+            <artifactId>logstash-logback-encoder</artifactId>
+            <version>6.1</version>
+        </dependency>
     </dependencies>
 
     <name>Olina speed code</name>
-    <description>Serialize and Deserialize Json-LD into Java entities</description>
+    <description>Description</description>
     <url>https://github.com/felipeflores/olina</url>
 
     <organization>
